Fix White-Overflow.

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -83,4 +83,6 @@
 
 body{
     margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
